# document-parser-mcp

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
docs/: API.md
document_parser/: __init__.py  __main__.py  cli.py
document_parser/config/: __init__.py  models.py  settings.py
document_parser/core/: __init__.py  exceptions.py
document_parser/engine/: __init__.py  download_manager.py  pipeline_factory.py  processor.py
document_parser/mcp/: __init__.py  handlers.py  server.py  tools.py
document_parser/processing/: __init__.py  job.py  task_queue.py  task_tracker.py
document_parser/utils/: __init__.py  file_utils.py  logging_utils.py  network_utils.py  system_utils.py
examples/: basic_usage.py  batch_processing.py
examples/configs/: high-performance.yaml  high-quality.yaml  low-resource.yaml
tests/: __init__.py  conftest.py  test_config.py  test_processing.py  test_utils.py
